@@ -1,0 +1,12 @@
+package deco.block.util;
+
+public class SandHelper {
+	public static final String[] names = new String[] {"sand", "red"};
+	public static final String[] namesCapital = new String[] {"Sand", "Red"};
+	
+	public static final int NUM_EXTRA_SAND_TYPES = 1;
+	public static final int NUM_SAND_TYPES = NUM_EXTRA_SAND_TYPES + 1;
+	
+	public static final int SAND_TYPE = 0;
+	public static final int RED_SAND_TYPE = 1;
+}
