@@ -1,0 +1,5 @@
+package deco.item.util;
+
+public interface LegacySubstitutionBlockItemInterface {
+	void setMetadataToPlace(int metadata);
+}
