@@ -8,6 +8,7 @@
     "BookshelfBlockMixin",
     "LadderBlockFlamingMixin",
     "PlanksBlockMixin",
+    "SandBlockMixin",
     "SidingAndCornerBlockMixin",
     "WoodMouldingBlockMixin",
     "WoodSidingAndCornerBlockMixin",
