@@ -7,6 +7,8 @@
     "BarkItemMixin",
     "BookItemMixin",
     "DoorItemMixin",
+    "LegacySubstitutionBlockItemMixin",
+    "SandPileItemMixin",
     "SignItemMixin",
     "WoodCornerStubMixin",
     "WoodMouldingStubMixin",
